# gst-editor

./: .clang-format  .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  RELEASE  TODO  autogen.sh  configure.ac  gst-editor-libs-uninstalled.pc.in  gst-editor-libs.pc.in  gst-editor.desktop  gst-editor.desktop.in  gst-editor.spec  gst-editor.spec.in  gst-inspect.desktop  gst-inspect.desktop.in  gst-launch.desktop  gst-launch.desktop.in
common/: ChangeLog
common/coverage/: coverage-report.xsl
common/m4/: .gitignore  gst-error.m4
help/: Makefile.am  omf.make  xmldocs.make
help/C/: Makefile.am  gst-editor-manual-C.omf  gst-editor-manual.xml  legal.xml
libs/gst/: Makefile.am
libs/gst/common/: Makefile.am  gste-common-priv.h  gste-common.c  gste-common.h  gste-debug.c  gste-debug.h  gste-dnd.h  gste-dock.h  gste-marshal.list  gste-serialize.c  gste-serialize.h
libs/gst/debug-ui/: Makefile.am  debug-ui.c  debug-ui.h
libs/gst/editor/: Makefile.am  editor.h  gst-helper.c  gst-helper.h  gsteditor.c  gsteditor.h  gsteditorbin.c  gsteditorbin.h  gsteditorcanvas.c  gsteditorcanvas.h  gsteditorelement.c  gsteditorelement.h  gsteditorimage.c  gsteditorimage.h  gsteditoritem.c  gsteditoritem.h  gsteditorlink.c  gsteditorlink.h  gsteditorpad.c  gsteditorpad.h  gsteditorpalette.c  gsteditorpalette.h  gsteditorpopup.c  gsteditorpopup.h  gsteditorproperty.c  gsteditorproperty.h  gsteditorstatusbar.c  gsteditorstatusbar.h  namedicons.c  namedicons.h  stockicons.c  stockicons.h
libs/gst/element-browser/: Makefile.am  browser.c  browser.h  caps-tree.c  caps-tree.h  element-tree.c  element-tree.h
libs/gst/element-ui/: Makefile.am  gst-element-ui-prop-view.c  gst-element-ui-prop-view.h  gst-element-ui.c  gst-element-ui.h
pixmaps/: Makefile.am  gdk-pixbuf-csource.c  gdk-pixdata.c  gdk-pixdata.h  pixmaps.h
po/: POTFILES.in  nl.po  no.po
src/: Makefile.am  editor.c  editor.glade2  editor.ui  gst-inspect-gui.1  gst-inspect-gui.c  gst-launch-gui.1  gst-launch-gui.c
