lib_LTLIBRARIES = libgstelementui.la

libgstelementui_la_SOURCES =		\
	gst-element-ui.c		\
	gst-element-ui-prop-view.c

libgstelementui_la_CFLAGS = $(GST_EDITOR_CFLAGS)
libgstelementui_la_LDFLAGS = $(GST_EDITOR_LIBS)

libgstelementuiincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/element-ui
libgstelementuiinclude_HEADERS = gst-element-ui.h gst-element-ui-prop-view.h
